package topicData;
syntax = "proto3";

message topicDataMessage {
    string message_type = 1; 
    string topic = 2; 
    string value = 3; 
    string device_identifier = 4; 
}